<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">
    <Button
        android:id="@+id/buttonC"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/C"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonplusminus"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#B9BBB6"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/buttonplusminus"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/plusminus"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonpercent"
        android:backgroundTint="#B9BBB6"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/buttonpercent"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/percent"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttondiv"
        android:backgroundTint="#B9BBB6"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/buttondiv"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/division"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonmul"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#EB9605"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/four"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#48494B"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/five"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        android:backgroundTint="#48494B"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/six"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonsub"
        android:backgroundTint="#48494B"/>
    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/seven"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#48494B" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/eight"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        android:backgroundTint="#48494B"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/nine"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonmul"
        android:backgroundTint="#48494B"/>
    <Button
        android:id="@+id/buttonmul"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/multiplication"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsub"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#EB9605"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/one"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#48494B"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/two"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        android:backgroundTint="#48494B"/>


    <Button
        android:id="@+id/dot"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:onClick="onButtonClick"
        android:text="@string/point"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttoneql"
        android:backgroundTint="#48494B"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/three"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/buttonadd"
        android:backgroundTint="#48494B"/>
    <Button
        android:id="@+id/buttonadd"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/plus"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttoneql"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#EB9605"/>

    <Button
        android:id="@+id/buttonsub"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonClick"
        android:text="@string/minus"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonadd"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#EB9605"/>

    <Button
        android:id="@+id/buttoneql"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:onClick="onButtonClick"
        android:text="@string/equal"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#EB9605"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="167dp"
        android:layout_height="71dp"
        android:layout_marginBottom="28dp"
        android:onClick="onButtonClick"
        android:text="@string/zero"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#48494B"/>

    <TextView
        android:id="@+id/txt"
        android:layout_width="340dp"
        android:layout_height="90dp"
        android:text="0"
        android:textDirection="rtl"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="173dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>